// models/entities/CategoriaEntity.ts
export interface CategoriaEntity {
  id: number;
  name: string;
  restaurant_id: number;
}